--- a/.env
+++ b/.env
@@ -26,3 +26,12 @@ APP_SECRET=1ed29aa028b43d4141a622f6d5d26ebc
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+MAILER_DSN=gmail+smtp://victordedomenico.du60@gmail.com:Itachi60@default
+###< symfony/google-mailer ###
